--- a/delivr-aide-react-website-1.0/src/styles/_app.scss
+++ b/delivr-aide-react-website-1.0/src/styles/_app.scss
@@ -28,7 +28,7 @@
     flex-direction: column;
     width: 100%;
     .introduction-btn {
-        margin-bottom: 45px;
+        margin-bottom: 0px;
     }
     .introduction-column-wrapper {
         display: flex;
@@ -38,7 +38,7 @@
         gap: 40px;
         @supports not (-webkit-gap: 40px) {
             .left-column{
-                padding-right: 40px;
+                padding-right: 10px;
             }
         }
         margin-bottom: 50px;
@@ -51,7 +51,7 @@
             gap: 50px;
             @supports not (-webkit-gap: 50px) {
                 .hero-title {
-                    padding-bottom: 50px;
+                    padding-bottom: 20px;
                 }
             }
             width: 50vw;
